Change the font color and background and the font and the text

--- a/blog.html
+++ b/blog.html
@@ -14,19 +14,19 @@
 					<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
 					<ul>
 						<li>
-							<a href="index.html" id="menu1">home</a>
+							<a href="index.html" id="menu1">Krysta</a>
 						</li>
 						<li>
-							<a href="media.html" id="menu2">media</a>
+							<a href="media.html" id="menu2">is</a>
 						</li>
 						<li>
-							<a href="games.html" id="menu3">games</a>
+							<a href="games.html" id="menu3">a</a>
 						</li>
 						<li>
-							<a href="about.html" id="menu4">about</a>
+							<a href="about.html" id="menu4">smart</a>
 						</li>
 						<li class="selected">
-							<a href="blog.html" id="menu5">blog</a>
+							<a href="blog.html" id="menu5">ass</a>
 						</li>
 					</ul>
 				</div>
@@ -40,18 +40,17 @@
 							<ul>
 								<li>
 									<div class="header">
-										<b>This is just a place holder</b><span><a href="#">july 2012</a><a href="#">name</a></span>
+										<b>Laasia ward laasia ward</b><span><a href="#">july 2012</a><a href="#">name</a></span>
 									</div>
 									<div class="article">
 										<a href="#" class="figure"><img src="images/blog1.jpg" alt=""></a>
-										<p>
-											You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forum</a>.<br><a href="blog.html" class="more">read more</a>
+										<p>I NEED YOU TO CHECK MY WORK <a href="http://www.freewebsitetemplates.com/forums/">Forum</a>.<br><a href="blog.html" class="more">read more</a>
 										</p>
 									</div>
 								</li>
 								<li>
 									<div class="header">
-										<b>This is just a place holder</b><span><a href="#">july 2012</a><a href="#">name</a></span>
+										<b>AOIT sucks</b><span><a href="#">july 2012</a><a href="#">name</a></span>
 									</div>
 									<div class="article">
 										<a href="" class="figure"><img src="images/blog2.jpg" alt=""></a>
@@ -68,16 +67,16 @@
 							</div>
 							<ul>
 								<li>
-									<a href="#">This is just a place holder</a>
+									<a href="#">ASIA BDAY</a>
+									<span><a href="#">DECEMBER 29</a><a href="#">name</a></span>
+								</li>
+								<li>
+									<a href="">JADA 26</a>
 									<span><a href="#">july 2012</a><a href="#">name</a></span>
 								</li>
 								<li>
-									<a href="">This is  a free website template</a>
-									<span><a href="#">july 2012</a><a href="#">name</a></span>
-								</li>
-								<li>
-									<a href="">This is just a place holder</a>
-									<span><a href="#">july 2012</a><a href="#">name</a></span>
+									<a href="">MOJO</a>
+									<span><a href="#">OCO 12</a><a href="#">name</a></span>
 								</li>
 								<li>
 									<a href="">This is just a place holder, so you can see what the site would look like.</a>
