--- a/about.html
+++ b/about.html
@@ -14,19 +14,19 @@
 					<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
 					<ul>
 						<li>
-							<a href="index.html" id="menu1">home</a>
+							<a href="index.html" id="menu1">Asia</a>
 						</li>
 						<li>
-							<a href="media.html" id="menu2">media</a>
+							<a href="media.html" id="menu2">Is</a>
 						</li>
 						<li>
-							<a href="games.html" id="menu3">games</a>
+							<a href="games.html" id="menu3">The</a>
 						</li>
 						<li class="selected">
-							<a href="about.html" id="menu4">about</a>
+							<a href="about.html" id="menu4">Best</a>
 						</li>
 						<li>
-							<a href="blog.html" id="menu5">blog</a>
+							<a href="blog.html" id="menu5">Dancer</a>
 						</li>
 					</ul>
 				</div>
@@ -39,7 +39,7 @@
 						<div class="content">
 							<ul>
 								<li>
-									<h3>We Have Free Templates for Everyone</h3>
+									<h3>Only For LaAsia</h3>
 									<div>
 										<p>
 											Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded.
@@ -53,7 +53,7 @@
 									</div>
 								</li>
 								<li>
-									<h3>We Have More Templates for You</h3>
+									<h3>We Have everything for you</h3>
 									<div>
 										<span>Looking for more templates?</span>
 										<p>
@@ -66,7 +66,7 @@
 						<div class="aside">
 							<ul>
 								<li>
-									<h3>Be Part of Our Community</h3>
+									<h3>Hell No</h3>
 									<div>
 										<p>
 											If you’re experiencing issues and concerns about this website template, join the discussion on <a href="http://www.freewebsitetemplates.com/forums/">on our forum</a> and meet other people in the community who share the same interests with you.
@@ -74,7 +74,7 @@
 									</div>
 								</li>
 								<li>
-									<h3>Template details</h3>
+									<h3>Mind Your Business</h3>
 									<div>
 										<p>
 											Design version 4<br>Code version 2<br>Website Template details, discussion and updates for this <a href="http://www.freewebsitetemplates.com/discuss/gamewebsitetemplate/">Game Website Template</a>. Website Template design by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>. Please feel free to remove some or all the text and links of this page and replace it with your own About content.
