--- a/games.html
+++ b/games.html
@@ -14,19 +14,19 @@
 					<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
 					<ul>
 						<li>
-							<a href="index.html" id="menu1">home</a>
+							<a href="index.html" id="menu1">Red</a>
 						</li>
 						<li>
-							<a href="media.html" id="menu2">media</a>
+							<a href="media.html" id="menu2">Yellow</a>
 						</li>
 						<li class="selected">
-							<a href="games.html" id="menu3">games</a>
+							<a href="games.html" id="menu3">green</a>
 						</li>
 						<li>
-							<a href="about.html" id="menu4">about</a>
+							<a href="about.html" id="menu4">Brown</a>
 						</li>
 						<li>
-							<a href="blog.html" id="menu5">blog</a>
+							<a href="blog.html" id="menu5">blue</a>
 						</li>
 					</ul>
 				</div>
@@ -37,7 +37,7 @@
 				<div>
 					<div class="games">
 						<div class="content">
-							<h3>best games</h3>
+							<h3>EWWWWWW</h3>
 							<ul>
 								<li>
 									<a href="#" class="figure"><img src="images/best-game1.jpg" alt=""></a> <span><a href="#">This is just a place holder</a></span>
@@ -48,7 +48,7 @@
 							</ul>
 						</div>
 						<div class="aside">
-							<h3>other games</h3>
+							<h3>OO look at me(Laasia)</h3>
 							<ul>
 								<li>
 									<a href="#" class="figure"><img src="images/game1.jpg" alt=""></a>
