--- a/media.html
+++ b/media.html
@@ -14,19 +14,19 @@
 					<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
 					<ul>
 						<li>
-							<a href="index.html" id="menu1">home</a>
+							<a href="index.html" id="menu1">I</a>
 						</li>
 						<li class="selected">
-							<a href="media.html" id="menu2">media</a>
+							<a href="media.html" id="menu2">CHANGED</a>
 						</li>
 						<li>
-							<a href="games.html" id="menu3">games</a>
+							<a href="games.html" id="menu3">THE</a>
 						</li>
 						<li>
-							<a href="about.html" id="menu4">about</a>
+							<a href="about.html" id="menu4">BUTTONS</a>
 						</li>
 						<li>
-							<a href="blog.html" id="menu5">blog</a>
+							<a href="blog.html" id="menu5">!!</a>
 						</li>
 					</ul>
 				</div>
@@ -38,7 +38,7 @@
 					<div class="media">
 						<div>
 							<div>
-								<h3>wallpapers</h3>
+								<h3>Nasty Wallpapers !!!!!</h3>
 								<ul>
 									<li>
 										<a href="#" class="figure"><img src="images/wallpaper1.jpg" alt=""></a>
@@ -59,7 +59,7 @@
 								</ul>
 							</div>
 							<div>
-								<h3>videos</h3>
+								<h3>THING THING THING </h3>
 								<ul>
 									<li>
 										<a href="#" class="figure"><img src="images/video1.jpg" alt=""></a>
@@ -81,7 +81,7 @@
 							</div>
 						</div>
 						<div class="article">
-							<h3>this is just a place holder</h3>
+							<h3>tadsfghjkljhgfdsaDFGHJKL</h3>
 							<ul>
 								<li>
 									<a href="#" class="figure"><img src="images/media2.jpg" alt=""></a>
